<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"

    android:gravity="center"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        >

        <TextView
            android:id="@+id/question_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="50dp"
            android:textAlignment="center"
            android:elegantTextHeight="true"
            android:textAllCaps="true"
            android:textStyle="bold"
            android:textSize="20sp"
            tools:text="@string/question_london"
            />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center">

            <Button
                android:id="@+id/true_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:rotationX="0"
                android:text="@string/true_button" />
            <Space
                android:layout_width="20dp"
                android:layout_height="0dp" />
            <Button
                android:id="@+id/false_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/false_button"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_gravity="center" >

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/prev_btn"
                android:text="@string/prev_question"
                app:icon="@drawable/arrow_left"
                app:iconGravity="textStart"/>

            <Space
                android:layout_width="20dp"
                android:layout_height="0dp" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/next_btn"
                android:text="@string/next_question"
                app:icon="@drawable/arrow_right"
                app:iconGravity="textEnd"/>

        </LinearLayout>

    </LinearLayout>


</LinearLayout>